CRUD todolist with sqlite database

--- a/BeastList/app/src/main/res/layout/fragment_beast_detail.xml
+++ b/BeastList/app/src/main/res/layout/fragment_beast_detail.xml
@@ -28,4 +28,9 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/beasted_label"/>
+
+    <Button android:id="@+id/delete_beast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/delete_beast"/>
 </LinearLayout>
